<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login_Activity"
    android:orientation="vertical"
    android:background="@drawable/login_image"
    android:src="@drawable/login_image"
    android:scaleType="centerCrop"
    android:padding="30dp">
    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/logo"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/logo_about" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="30dp">
        <com.google.android.material.textfield.TextInputLayout
            style="@style/input_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_login"
            android:layout_marginTop="10dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:counterTextColor="@color/white"
                android:inputType="text"
                style="@style/input_style"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_password"
            android:layout_marginTop="10dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:counterTextColor="@color/white"
                android:inputType="textPassword"
                style="@style/input_style" />
        </com.google.android.material.textfield.TextInputLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login"
            style="@style/text_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@color/btn"
            android:radius="15dp"
            android:text="@string/btn_login"
            android:textColor="@color/white" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:padding="30dp"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/not_reg"
                android:fontFamily="sans-serif"
                android:textColor="@color/white"
                android:textSize="14sp"/>
            <TextView
                android:id="@+id/reg_here"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reg_here"
                style="@style/text_login"
                android:fontFamily="sans-serif"
                android:textColor="@color/white"
                android:textSize="14sp"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>